# queue-aware-dynamic-double-auctions

./: .gitignore  CITATION.cff  EXPERIMENT_RESULTS.md  LICENSE  README.md  RUNBOOK.md  abandonment_penalty_sensitivity.py  analyze_queue_abandonment.py  audit_queue_aware_continuation.py  backfill_dynamic_strong_baselines.py  bootstrap_continuation_audit.py  bootstrap_continuation_samples.py  bootstrap_dynamic_comparisons.py  data_schema_audit.py  dynamic_continuation_audit.py  dynamic_double_auction.py  dynamic_history_audit.py  dynamic_relaxation_thresholds.py  econpinn_double_auction.py  environment.yml  evaluate_dynamic_model.py  evaluate_queue_aware_mcafee.py  evaluate_saved_model.py  exact_dynamic_audit.py  exact_dynamic_robustness.py  exact_static_frontier_lp.py  figure_audit.py  finetune_continuation_regret.py  hardcase_mining_repair.py  interpret_dynamic_policy.py  learned_continuation_auditor.py  learned_report_exit_auditor.py  make_paper_assets.py  multi_offset_continuation_audit.py  online_hardcase_crossfit.py  online_hardcase_multiseed.py  online_hardcase_repair.py  paired_continuation_sweep.py  pdf_visual_audit.py  price_impact_queue_aware.py  (+23 more)
